--- a/ArraysAndES6/index.html
+++ b/ArraysAndES6/index.html
@@ -18,6 +18,10 @@
 			background-size: cover;
 			position: relative;
 			color: white;
+			text-align: center;
+			display: flex;
+			justify-content: space-around;
+			align-items: center;
 		}
 		body:before{
 			content: '';
@@ -27,6 +31,7 @@
 			position: absolute;
 			top: 0;
 			left: 0;
+			z-index: -1;
 		}
 	</style>
 </head>
@@ -34,6 +39,7 @@
 	<div class="container">
 		<h1>Arrays and ES2015 <small>...and beyond..</small></h1>
 		<p>All of this is done in the console.. hit CMD + Alt + J or CTRL + Shift + J</p>
+		<small>Photo Credit : <a href="https://unsplash.com/@mattrobinjones" target="_blank">@mattrobinjones</a></small>
 	</div>
 	<script src="main.js"></script>
 </body>
