cleaning up the funStuff and leaving comments

--- a/ArraysAndES6/funStuff.html
+++ b/ArraysAndES6/funStuff.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 	<div class="container">
-		<div class="col-xs-6">
+		<div class="col-xs-12">
 			<div class="form-group">
 				<label>Find Character by Name</label>
 			  <input type="text" class="search form-control" placeholder="Find by Character Name">
@@ -24,7 +24,7 @@
 				
 			</div>
 		</div>
-		<div class="col-xs-6">
+		<div class="col-xs-12">
 			<div class="form-group">
 				<label>Select Actor</label>
 				<select class="actorSelect form-control"></select>
@@ -35,14 +35,16 @@
 		</div>
 	</div>
 
-	<div class="col-xs-12">
-		<ul class="nav">
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Contact</a></li>
-			<li><a href="#">Blog</a></li>
-			<li><a href="#">Gallery</a></li>
-		</ul>
+	<div class="container">
+		<div class="col-xs-12">
+			<ul class="nav">
+				<li><a href="#">Home</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Contact</a></li>
+				<li><a href="#">Blog</a></li>
+				<li><a href="#">Gallery</a></li>
+			</ul>
+		</div>
 	</div>
 
 
