fixing back ground image issue

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <title>Palm Beach JS</title>
     <style>
+    body {
+      background-size: cover;
+      height: 100vh;
+    }
     #Transparent {
       background: rgba(0, 0, 0, 0.7);
       color:white; 
